codama-syn-helpers/tests/meta/as_expr/from_path_value.fail.stderr
error: expected a valid expression
 --> tests/meta/as_expr/from_path_value.fail.rs:3:11
  |
3 | #[as_expr(foo = bar(1, 2, 3))]
  |           ^^^^^^^^^^^^^^^^^^
